Constraints - influence other than 0 or 1 - bad results with non-homogeneous scaled matrices #46418

Closed
opened 2015-10-08 17:56:44 +02:00 by boris · 7 comments

System Information
Mint 17
GTX 560Ti

Blender Version
Broken: 2.76RC3 and older
Worked: (optional)

Short description of error

A bone with a transformation constraint AND parented to a stretchy bone behave strangely when transformation constraint influence is not 0 or 1.

Exact steps for others to reproduce the error

transformation_bug.blend

Open the attached blend file

  • Play with bone "bug" constraint influence : it snap at 0 or 1 but rotate strangly inbetween
  • Play with stertcher bone to see strange rotation will stretching (only if bug's constraint !=0 or !=1)

infos:

  • if "stretcher" bone is reset (alg G), everything works smoothly
  • if "bug" bone inherit rotation or scale are checked Off, everything works too

Thanks

**System Information** Mint 17 GTX 560Ti **Blender Version** Broken: 2.76RC3 and older Worked: (optional) **Short description of error** A bone with a transformation constraint AND parented to a stretchy bone behave strangely when transformation constraint influence is not 0 or 1. **Exact steps for others to reproduce the error** [transformation_bug.blend](https://archive.blender.org/developer/F243443/transformation_bug.blend) Open the attached blend file - Play with bone "bug" constraint influence : it snap at 0 or 1 but rotate strangly inbetween - Play with stertcher bone to see strange rotation will stretching (only if bug's constraint !=0 or !=1) infos: - if "stretcher" bone is reset (alg G), everything works smoothly - if "bug" bone inherit rotation or scale are checked Off, everything works too Thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @boriscohen

Added subscriber: @boriscohen
Author

Did some more test and it seems to have this behavior not only when parent is stretch but even if stretch to constraint is removed and bone "parent" is scaled non uniformely (only his local Y axis ie).

Did some more test and it seems to have this behavior not only when parent is stretch but even if stretch to constraint is removed and bone "parent" is scaled non uniformely (only his local Y axis ie).

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, this is not really a bug though, issue comes from the fact our matrix interpolation code is rather simple and does not perform well with non-homogeneous scaling…

Will switch to TODO and see whether I can find a good solution (polar decomposition sounds like the solution here…).

Confirmed, this is not really a bug though, issue comes from the fact our matrix interpolation code is rather simple and does not perform well with non-homogeneous scaling… Will switch to TODO and see whether I can find a good solution (polar decomposition sounds like the solution here…).
Bastien Montagne changed title from Transformation constraint, strange behavior with stretch to Constraints - influence other than 0 or 1 - bad results with non-homogeneous scaled matrices 2015-10-09 13:00:13 +02:00
Bastien Montagne self-assigned this 2015-10-09 13:00:13 +02:00

This issue was referenced by 01f235e138

This issue was referenced by 01f235e13804d0d41446238d2ddfefefedf497e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46418
No description provided.