Fix T46418: Constraints - influence other than 0 or 1 - bad results with non-homogeneous scaled matrices.

Use new interp_m4_m4m4 instead of blend_m4_m4m4.

Note that maybe we could replace other usages of blend_m... by interp_m...,
but this should be investigated on a case-by-case basis.